Match --add-opens